[gd_scene load_steps=4 format=2]

[ext_resource path="res://Tehuis.gd" type="Script" id=1]
[ext_resource path="res://TehuisDragNDropV2.tscn" type="PackedScene" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 9, 8.5 )

[node name="Tehuis" type="Node2D"]
script = ExtResource( 1 )

[node name="TehuisDragNDropV2" parent="." instance=ExtResource( 3 )]
position = Vector2( 196, 97 )

[node name="Doel1" type="ColorRect" parent="."]
margin_left = 16.0
margin_top = 15.0
margin_right = 34.0
margin_bottom = 32.0
color = Color( 1, 0, 0, 1 )

[node name="Area2D" type="Area2D" parent="Doel1"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Doel1/Area2D"]
position = Vector2( 9, 8.5 )
shape = SubResource( 1 )

[node name="Doel2" type="ColorRect" parent="."]
margin_left = 15.0
margin_top = 73.0
margin_right = 33.0
margin_bottom = 90.0
color = Color( 0, 1, 0, 1 )

[node name="Area2D" type="Area2D" parent="Doel2"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Doel2/Area2D"]
position = Vector2( 9, 8.5 )
shape = SubResource( 1 )

[node name="Doel3" type="ColorRect" parent="."]
margin_left = 17.0
margin_top = 137.0
margin_right = 35.0
margin_bottom = 154.0
color = Color( 0, 0, 1, 1 )

[node name="Area2D" type="Area2D" parent="Doel3"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Doel3/Area2D"]
position = Vector2( 9, 8.5 )
shape = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 10.0

[node name="Tijd" type="RichTextLabel" parent="."]
margin_left = 133.0
margin_top = 5.0
margin_right = 193.0
margin_bottom = 59.0

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 197, 96 )

[node name="Strafpunten" type="RichTextLabel" parent="."]
margin_left = 6.0
margin_top = 97.0
margin_right = 54.0
margin_bottom = 137.0

[node name="Timer2" type="Timer" parent="."]
wait_time = 30.0
autostart = true

[connection signal="area_entered" from="Doel1/Area2D" to="." method="_on_Doel1_area_entered"]
[connection signal="area_entered" from="Doel2/Area2D" to="." method="_on_Doel2_area_entered"]
[connection signal="area_entered" from="Doel3/Area2D" to="." method="_on_Doel3_area_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]
